first working generator

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,12 +19,7 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="container">
-      <h1>Welcome to Frame</h1>
-      <ol>
-        <li>Foobar</li>
-      </ol>
-    </div>
+    <div id="container"></div>
 
     <!-- build:js /scripts/main.js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
